Regression: Node socket active/snapping area became smaller #100430

Closed
opened 2022-08-16 00:58:00 +02:00 by Vyacheslav Kobozev · 8 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: bcfdb14560
Worked: 3.1.2
Changed in d9d97db018

No dead-zone between sockets or very tiny (pair of pixels) and much bigger to the left/right.
But since 2.83 it became smaller. I feel it, because i miss sockets much oftener.
File for tests.
snap_area_test.blend

Expected snapping area should be like this:
изображение.png
2022-08-16_01-45-20.mp4

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `bcfdb14560` Worked: 3.1.2 Changed in d9d97db018 No dead-zone between sockets or very tiny (pair of pixels) and much bigger to the left/right. But since 2.83 it became smaller. I feel it, because i miss sockets much oftener. File for tests. [snap_area_test.blend](https://archive.blender.org/developer/F13389854/snap_area_test.blend) Expected snapping area should be like this: ![изображение.png](https://archive.blender.org/developer/F13389834/изображение.png) [2022-08-16_01-45-20.mp4](https://archive.blender.org/developer/F13389842/2022-08-16_01-45-20.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @dominikfill, @HooglyBoogly

Added subscribers: @dominikfill, @HooglyBoogly
Member
Changed in d9d97db018 cc @HooglyBoogly cc @dominikfill
Pratik Borhade changed title from Node socket active/snapping area became smaller to Regression: Node socket active/snapping area became smaller 2022-08-18 08:24:41 +02:00
Leon Schittek was assigned by Pratik Borhade 2022-08-20 13:25:07 +02:00

This issue was referenced by 563404d8ad

This issue was referenced by 563404d8ad44a03443b54c51e502b108fcd42555

This issue was referenced by a0c28a8054

This issue was referenced by a0c28a805483afb9f34199789d19c51d9811ff84
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100430
No description provided.