source/blender/editors/space_node/node_edit.cc
@@ -913,15 +913,24 @@ static void edit_node_properties_get(
 /** \name Node Generic
  * \{ */
 
-/* is rct in visible part of node? */
-static bNode *visible_node(SpaceNode &snode, const rctf &rct)
+static bool socket_is_occluded(const bNodeSocket &sock,
+                               const bNode &node_the_socket_belongs_to,
+                               const SpaceNode &snode)
 {
   LISTBASE_FOREACH_BACKWARD (bNode *, node, &snode.edittree->nodes) {
-    if (BLI_rctf_isect(&node->totr, &rct, nullptr)) {
-      return node;
+    if (node == &node_the_socket_belongs_to) {
+      /* Nodes after this one are underneath and can't occlude the socket. */
+      return false;
+    }
+
+    rctf socket_hitbox;
+    const float socket_hitbox_radius = NODE_SOCKSIZE - 0.1f * U.widget_unit;
+    BLI_rctf_init_pt_radius(&socket_hitbox, float2(sock.locx, sock.locy), socket_hitbox_radius);
+    if (BLI_rctf_inside_rctf(&node->totr, &socket_hitbox)) {
+      return true;
     }
   }
-  return nullptr;
+  return false;
 }
 
 /** \} */
@@ -1216,10 +1225,8 @@ bool node_find_indicated_socket(SpaceNode &snode,
   *sockp = nullptr;
 
   /* check if we click in a socket */
-  LISTBASE_FOREACH (bNode *, node, &snode.edittree->nodes) {
+  LISTBASE_FOREACH_BACKWARD (bNode *, node, &snode.edittree->nodes) {
     BLI_rctf_init_pt_radius(&rect, cursor, size_sock_padded);
-    rctf node_visible;
-    BLI_rctf_init_pt_radius(&node_visible, cursor, size_sock_padded);
 
     if (!(node->flag & NODE_HIDDEN)) {
       /* extra padding inside and out - allow dragging on the text areas too */
@@ -1238,7 +1245,7 @@ bool node_find_indicated_socket(SpaceNode &snode,
         if (!nodeSocketIsHidden(sock)) {
           if (sock->flag & SOCK_MULTI_INPUT && !(node->flag & NODE_HIDDEN)) {
             if (cursor_isect_multi_input_socket(cursor, *sock)) {
-              if (node == visible_node(snode, node_visible)) {
+              if (!socket_is_occluded(*sock, *node, snode)) {
                 *nodep = node;
                 *sockp = sock;
                 return true;
@@ -1246,7 +1253,7 @@ bool node_find_indicated_socket(SpaceNode &snode,
             }
           }
           else if (BLI_rctf_isect_pt(&rect, sock->locx, sock->locy)) {
-            if (node == visible_node(snode, node_visible)) {
+            if (!socket_is_occluded(*sock, *node, snode)) {
               *nodep = node;
               *sockp = sock;
               return true;
@@ -1259,7 +1266,7 @@ bool node_find_indicated_socket(SpaceNode &snode,
       LISTBASE_FOREACH (bNodeSocket *, sock, &node->outputs) {
         if (!nodeSocketIsHidden(sock)) {
           if (BLI_rctf_isect_pt(&rect, sock->locx, sock->locy)) {
-            if (node == visible_node(snode, node_visible)) {
+            if (!socket_is_occluded(*sock, *node, snode)) {
               *nodep = node;
               *sockp = sock;
               return true;
